<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="list_title_my_nano_degree_app">My Nanodegree Apps!</string>
    <string name="popular_movies">Popular movies</string>
    <string name="stock_hawk">Stock hawk</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="make_your_app_material">Make your app material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
</resources>
