<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ramanandank.project0.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_title_my_nano_degree_app"
            android:textSize="24sp"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/popular_movies"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/udacity_primary"
            android:text="@string/popular_movies"
            android:textAllCaps="true"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/stock_hawk"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/udacity_primary"
            android:text="@string/stock_hawk"
            android:textAllCaps="true"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/build_it_bigger"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/udacity_primary"
            android:text="@string/build_it_bigger"
            android:textAllCaps="true"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/material_app"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/udacity_primary"
            android:text="@string/make_your_app_material"
            android:textAllCaps="true"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/go_ubiquitous_app"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/udacity_primary"
            android:text="@string/go_ubiquitous"
            android:textAllCaps="true"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/capstone_app"
            android:layout_width="250dp"
            android:layout_height="36dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/udacity_primary"
            android:text="@string/capstone"
            android:textAllCaps="true"
            android:textColor="#ffffff" />

    </LinearLayout>
</RelativeLayout>
